--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,31 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light fs-4">
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/my-lists">My Lists</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/products" href="#">Products</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/register" href="#">Register</a>
+      </li>
+      @if( signedIn$ | async ) {
+      <button (click)="logout()">Logout</button>
+      }
+      @else {
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/login" href="#">Login</a>
+      </li>
+      }
+    </ul>
+  </div>
+</nav>
 <router-outlet></router-outlet>
