--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,40 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light fs-4">
+<nav class="navbar navbar-expand-sm navbar-light bg-light fs-4">
+  
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mx-auto">
+    <ul class="navbar-nav w-100">
       <li class="nav-item active">
         <a class="nav-link" routerLink="/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/my-lists">My Lists</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" routerLink="/products" href="#">Products</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/register" href="#">Register</a>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Account
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          @if( signedIn ) {
+            <li class="nav-item">
+              <button class="dropdown-item" (click)="logout()">Logout</button>
+            </li>
+          }
+          @else {
+            <li class="nav-item">
+              <a class="dropdown-item" routerLink="/login" href="#">login</a>
+            </li>
+          }
+        </ul>
       </li>
-      @if( signedIn$ | async ) {
-      <button (click)="logout()">Logout</button>
-      }
-      @else {
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/login" href="#">Login</a>
-      </li>
-      }
+
     </ul>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<div class="bckg">
+  <router-outlet></router-outlet>
+</div>
