--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -7,12 +7,6 @@
     flex-direction: column;
 }
 
-.container form {
-    padding: 30px;
-    border-radius: 15px;
-    border: 1px solid #cccccc;
-}
-
 .btn-container {
     width: 100%;
     display: flex;
@@ -29,4 +23,10 @@
 .btn-container #noaccount {
     padding-top: 20px;
     font-size: 12px;
+}
+
+@media only screen and (max-width: 600px) {
+    .container {
+        transform: scale(2);
+    }
 }
