--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -22,11 +22,11 @@
       formControlName="email"
     />
     <button
-      class="btn btn-success"
+      class="btn btn-success mt-4"
       type="submit"
       [disabled]="!credentials.valid"
     >
-      Submit
+      Register 
     </button>
   </form>
 </div>
