--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -25,6 +25,18 @@
     font-size: 12px;
 }
 
+.error {
+    color: red;
+    margin-top: 5px;
+    display: none;
+}
+
+.show {
+    display: block;
+}
+
+
+
 @media only screen and (max-width: 600px) {
     .container {
         transform: scale(2);
