--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -29,7 +29,8 @@
 <!-- standard material menu -->
     <mat-menu #rightMenu="matMenu">
         <ng-template matMenuContent let-item="item" >
-            <button mat-menu-item (click)="handleDelete()">Remove</button>
+            <button mat-menu-item (click)="onDelete()">Remove</button>
+            <button mat-menu-item (click)="onEdit()">Edit</button>
         </ng-template>
     </mat-menu>
 
