--- a/src/app/components/products/products.component.scss
+++ b/src/app/components/products/products.component.scss
@@ -2,16 +2,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px 10px 10px 10px;
-    margin-top: 10px;
+    padding: 8px 8px 8px 8px;
     border: solid 1px #cccccc;
     border-radius: 15px;
+    min-height: 40px;
+    width: 100px;
     height: fit-content;
     margin: 5px;
     font-size: 12px;
     text-align: center;
     cursor: pointer;
-    background-color: #fff8dc;;
+    background-color: #fff8dc;
 }
 
 .listItem:hover {
@@ -30,6 +31,11 @@
     overflow-y: scroll;
     scrollbar-width: none;
     height: 100%;
+    scroll-snap-type: y mandatory;
+}
+
+.main div {
+    scroll-snap-align: start;
 }
 
 .show {
@@ -61,7 +67,7 @@
 
 .keyword-container {
     position: absolute;
-    top: 70%;
+    top: 60vh;
     display: flex;
     justify-content: center;
     align-items: center;
